# CAL_PROJ

./: .gitignore  CAL PROJ.docx  README.md  report.tex
docs/: README.md
docs/First Delivery/: report.tex
docs/Second Delivery/: Análise Temporal Empírica.xlsx  report.tex  report.tex.bak
src/: CMakeLists.txt  edge.cpp  edges.cpp  fileHandler.cpp  gui.cpp  house.cpp  houseRequest.cpp  houses.cpp  inputHandler.cpp  main.cpp  request.cpp  spot.cpp  spots.cpp  user.cpp  vertex.cpp  vertexes.cpp  wasteApp.cpp
src/data/: edges.txt  nodes.txt  requests.txt  t02_tags_porto.txt  userlogins.txt
src/data/GridGraphs/16x16/: userlogins.txt
src/data/GridGraphs/4x4/: tags.txt  userlogins.txt
src/data/GridGraphs/8x8/: userlogins.txt
src/data/Porto/: porto_full_edges.txt  porto_full_nodes_latlng.txt  porto_full_nodes_xy.txt  tags.txt  userlogins.txt
src/include/: MutablePriorityQueue.h  edge.h  edges.h  fileHandler.h  gui.h  house.h  houseRequest.h  houses.h  inputHandler.h  request.h  spot.h  spots.h  user.h  vertex.h  vertexes.h  wasteApp.h
src/lib/: graphviewer.h
